force-app/main/default/objects/jst_Metadata_Item_Reference__c/jst_Metadata_Item_Reference__c.object-meta.xml
<CustomObject>
    <description>Object holding relationships between metadata</description>
    <label>AWB - Metadata Item Reference</label>
    <nameField>
        <displayFormat>REF-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWB - Metadata Item References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>