force-app/main/default/objects/jst_Metadata_Item_Reference__c/fields/MDI_MetadataComponentName__c.field-meta.xml
<CustomField>
    <fullName>MDI_MetadataComponentName__c</fullName>
    <formula>Metadata_Item__r.MetadataComponentName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDI MetadataComponentName</label>
    <type>Text</type>
</CustomField>