force-app/main/default/objects/jst_Metadata_Item_Reference__c/fields/MDI_MetadataComponentType__c.field-meta.xml
<CustomField>
    <fullName>MDI_MetadataComponentType__c</fullName>
    <formula>Metadata_Item__r.MetadataComponentType__c</formula>
    <label>MDI MetadataComponentType</label>
    <type>Text</type>
</CustomField>