force-app/main/default/objects/jst_Metadata_Item_Reference__c/fields/MDR_MetadataComponentName__c.field-meta.xml
<CustomField>
    <fullName>MDR_MetadataComponentName__c</fullName>
    <formula>Reference_Metadata_Item__r.MetadataComponentName__c</formula>
    <label>MDR MetadataComponentName</label>
    <type>Text</type>
</CustomField>