force-app/main/default/objects/jst_Metadata_Item_Reference__c/fields/MDR_MetadataComponentType__c.field-meta.xml
<CustomField>
    <fullName>MDR_MetadataComponentType__c</fullName>
    <formula>Reference_Metadata_Item__r.MetadataComponentType__c</formula>
    <label>MDR MetadataComponentType</label>
    <type>Text</type>
</CustomField>