force-app/main/default/objects/jst_Metadata_Item_Reference__c/fields/Metadata_Item__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Item__c</fullName>
    <description>The parent metadata Item</description>
    <label>Metadata Item</label>
    <referenceTo>jst_Metadata_Item__c</referenceTo>
    <relationshipLabel>Other metadata items that are referencing this metadata item</relationshipLabel>
    <relationshipName>Other_MDIs_referring_this_MDI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>