force-app/main/default/objects/jst_Metadata_Item_Reference__c/fields/Reference_Metadata_Item__c.field-meta.xml
<CustomField>
    <fullName>Reference_Metadata_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Metadata Item</label>
    <referenceTo>jst_Metadata_Item__c</referenceTo>
    <relationshipLabel>Metadata items Referenced by this Metadata Item</relationshipLabel>
    <relationshipName>MDIs_Referenced_by_this_MDI</relationshipName>
    <type>Lookup</type>
</CustomField>